--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="40dp">
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
@@ -57,7 +58,6 @@
             android:text="login"
             android:layout_gravity="end|right"
             android:onClick="performLogin"
-            android:textColor="#fff" />
-
+            android:textColor="#fff"/>
     </LinearLayout>
 </RelativeLayout>
