--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2A2</color>
-    <color name="colorPrimaryDark">#272</color>
-    <color name="colorAccent">#E22</color>
+    <color name="colorPrimary">#D11</color>
+    <color name="colorPrimaryDark">#D11</color>
+    <color name="colorAccent">#272</color>
 </resources>
