--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="tab_text_size" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">4pt</item>
+        <item name="android:textColor">#A22</item>
+    </style>
+
 </resources>
