--- a/app/src/main/res/layout/fragment_entrant.xml
+++ b/app/src/main/res/layout/fragment_entrant.xml
@@ -4,12 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragmentEntrant">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INDEGE ZINJIRA"
-        android:layout_gravity="center"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_entrant"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
