--- a/app/src/main/res/layout/fragment_sortant.xml
+++ b/app/src/main/res/layout/fragment_sortant.xml
@@ -4,12 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragmentSortant">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INDEGE ZISOHOKA"
-        android:layout_gravity="center"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_sortant"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
