--- a/app/src/main/res/layout/layout_passager.xml
+++ b/app/src/main/res/layout/layout_passager.xml
@@ -12,6 +12,7 @@
             android:orientation="vertical"
             android:layout_margin="5dp">
             <TextView
+                android:id="@+id/lbl_card_pass_fullname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lines="1"
@@ -35,6 +36,7 @@
                         android:textSize="8pt"
                         android:textStyle="bold" />
                     <TextView
+                        android:id="@+id/lbl_card_pass_depart"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:lines="1"
@@ -53,6 +55,7 @@
                     android:text="arrivée"
                     android:textSize="8pt"/>
                 <TextView
+                    android:id="@+id/lbl_card_pass_arrivee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lines="1"
@@ -62,6 +65,7 @@
             </LinearLayout>
         </LinearLayout>
             <TextView
+                android:id="@+id/lbl_card_pass_vol"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lines="1"
