--- a/app/src/main/res/layout/form_vol.xml
+++ b/app/src/main/res/layout/form_vol.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
@@ -15,51 +16,65 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DATE DE DEPART :"/>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:clipToPadding="false"
+        android:fillViewport="false">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:orientation="horizontal">
         <DatePicker
             android:id="@+id/picker_date_depart"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:datePickerMode="spinner"
-            android:calendarViewShown="false"/>
+            android:calendarViewShown="false"
+            tools:targetApi="lollipop" />
         <TimePicker
             android:id="@+id/picker_time_depart"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:timePickerMode="spinner"
             android:calendarViewShown="false"
             android:headerBackground="#272"
-            />
+            tools:targetApi="lollipop" />
     </LinearLayout>
+    </HorizontalScrollView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DATE D'ARIVEE ESTIMATIVE"/>
-    <LinearLayout
+
+    <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:orientation="horizontal">
-        <DatePicker
-            android:id="@+id/picker_date_arrivee"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:datePickerMode="spinner"
-            android:calendarViewShown="false"/>
+        android:clipToPadding="false"
+        android:fillViewport="false">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <TimePicker
-            android:id="@+id/picker_time_arrivee"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:calendarViewShown="false"
-            android:timePickerMode="spinner"/>
-    </LinearLayout>
+            <DatePicker
+                android:id="@+id/picker_date_arrivee"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner"
+                tools:targetApi="lollipop" />
+
+            <TimePicker
+                android:id="@+id/picker_time_arrivee"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:calendarViewShown="false"
+                android:timePickerMode="spinner"
+                tools:targetApi="lollipop" />
+        </LinearLayout>
+    </HorizontalScrollView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -99,7 +114,7 @@
             android:layout_height="wrap_content"
             android:text="supprimer"
             android:textColor="#900"
-            android:visibility="gone"
+            android:visibility="invisible"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
         <LinearLayout
             android:layout_width="0dp"
