coded Login activity & Reservation listing

--- a/app/src/main/res/layout/fragment_vol.xml
+++ b/app/src/main/res/layout/fragment_vol.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentSortant">
+    tools:context=".Fragments.FragmentVol">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_sortant"
         android:layout_width="match_parent"
