--- a/app/src/main/res/layout/layout_passager.xml
+++ b/app/src/main/res/layout/layout_passager.xml
@@ -11,68 +11,24 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:layout_margin="5dp">
+
+            <TextView
+                android:id="@+id/lbl_card_pass_serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:text="#21324565"
+                android:textSize="10pt"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/lbl_card_pass_fullname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:text="Jonathan Nkurunziza"
-                android:textSize="12pt"
-                android:textStyle="bold" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:lines="1"
-                        android:text="départ"
-                        android:textSize="8pt"
-                        android:textStyle="bold" />
-                    <TextView
-                        android:id="@+id/lbl_card_pass_depart"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:lines="1"
-                        android:text="21/08/2020 17h00"
-                        android:textSize="8pt"/>
-                </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:lines="1"
-                    android:text="arrivée"
-                    android:textSize="8pt"/>
-                <TextView
-                    android:id="@+id/lbl_card_pass_arrivee"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:lines="1"
-                    android:text="22/08/2020 17h00"
-                    android:textSize="8pt"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
-            <TextView
-                android:id="@+id/lbl_card_pass_vol"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:lines="1"
-                android:text="Air Burundi: Bujumbura to Kanombe"
-                android:textSize="9pt"
-                android:textStyle="bold"
-                android:textColor="#272"/>
+                android:textSize="8pt" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
