--- a/app/src/main/res/layout/layout_passager.xml
+++ b/app/src/main/res/layout/layout_passager.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -11,23 +11,30 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:layout_margin="5dp">
-
-            <TextView
-                android:id="@+id/lbl_card_pass_serial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:lines="1"
-                android:text="#21324565"
-                android:textSize="10pt"
-                android:textStyle="bold" />
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/ic_user"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/lbl_card_pass_fullname"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:text="Jonathan Nkurunziza"
-                android:textSize="8pt" />
+                android:textSize="9pt"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lbl_card_pass_serial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="#21324565"
+                android:lines="1"
+                android:textSize="7pt" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
