--- a/app/src/main/res/layout/fragment_passager.xml
+++ b/app/src/main/res/layout/fragment_passager.xml
@@ -11,6 +11,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_passager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
