--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,8 +12,8 @@
         android:id="@+id/menu_add"
         android:icon="@drawable/ic_add"
         android:title="Ajouter"
-        app:showAsAction="ifRoom"
-        android:visible="false"/>
+        app:showAsAction="always"
+        android:visible="true"/>
     <item
         android:id="@+id/menu_filter"
         android:title="Filtrer"/>
